<resources>
    <string name="app_name">LitHaven</string>
    <string name="completed_stories">Completed Stories</string>
    <string name="start_right_now">Start right now!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_collecton">My Collecton</string>
    <string name="create_story">Create Story</string>
    <string name="notifications">Notifications</string>
    <string name="account_name">Account name</string>
    <string name="add_book_cover">Add book cover!</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="create_new_story">Create new Story!</string>
    <string name="book_cover_preview">Book cover preview</string>
    <string name="name_the_part">Name the part</string>
    <string name="write">Write...</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="enter_story_themes">Enter story themes</string>
    <string name="story_title">Story Title</string>
    <string name="reg_AccountName">Account name</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="chapter_title_chapter_button">Chapter Title</string>
    <string name="chapter_text">Chapter text</string>
    <string name="add_new_chapter">Add new chapter</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>