<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/DarkGray2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Register">

  <ImageView
      android:id="@+id/imageView7"
      android:layout_width="125dp"
      android:layout_height="125dp"
      android:layout_marginTop="56dp"
      android:src="@drawable/book_and_person_winter_svgrepo_com"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:textColor="@color/BrightBlue"
      android:text="@string/registration"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/reg_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/reg_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="8dp"
      android:textColor="@color/BrightGray"
      android:textColorHint="@color/BrightGray"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:padding="15dp"
      app:layout_constraintBottom_toTopOf="@+id/reg_AccountName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/reg_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="16dp"
      android:textColor="@color/BrightGray"
      android:textColorHint="@color/BrightGray"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="numberPassword"
      android:padding="15dp"
      app:layout_constraintBottom_toTopOf="@+id/reg_sign_upButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/reg_sign_upButton"
      android:layout_width="150dp"
      android:layout_height="50dp"
      android:layout_marginBottom="175dp"
      android:text="@string/sign_in"
      android:textSize="17sp"
      android:textColor="@color/BrightGray"
      android:background="@color/DarkGray"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/reg_AccountName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="8dp"
      android:textColor="@color/BrightGray"
      android:textColorHint="@color/BrightGray"
      android:ems="10"
      android:hint="@string/reg_AccountName"
      android:inputType="text"
      app:layout_constraintBottom_toTopOf="@+id/reg_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>